tests/NormalTests/paczka1/small_fuzzy/25499558.err
Error in line 5: M8tvTuM7a A14 94,3
Error in line 15: 7EZkeZ S70 4,1
